--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.6"
 before_install:
-  - nvm isntall node
+  - nvm install node
 install:
   - pip install -r requirements.txt
   - cd web
