--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 mypy==0.501
+oauth2client==4.0.0
 six==1.10.0
 trueskill==0.4.4
 typed-ast==1.0.2
