--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,10 @@ script:
   - ng serve &
   - sleep 5 # In the odd case starting server takes longer than Chrome.
   - ng e2e
+after_success:
+  - git config --global user.email "builds@travis-ci.com"
+  - git config --global user.name "Travis CI"
+  #- export GIT_TAG=build-$TRAVIS_BRANCH-$(date -u "+%Y-%m-%d-%H-%M-%S")-$TRAVIS_BUILD_NUMBER
+  #- git tag $GIT_TAG -a -m "Generated tag from TravisCI build $TRAVIS_BUILD_NUMBER"
+  #- git push origin $GIT_TAG
+  - git push https://prod:${PROD_PWD}@ladders.lrem.net/git
