--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_install:
   - if [[ $TRAVIS_BRANCH = "master" ]] &&
        [[ $TRAVIS_PULL_REQUEST = "false" ]] &&
        [[ $TRAVIS_REPO_SLUG = "lrem/ladders" ]]; then
-      export PROD=1;
-      git checkout master;
+      export PROD=1
+      git branch "build-${TRAVIS_BUILD_NUMBER}"
     fi
   - nvm install node
 install:
@@ -35,10 +35,15 @@ script:
   - ng serve -prod &
   - sleep 5 # In the odd case starting server takes longer than Chrome.
   - ng e2e
+  - if [ $PROD ]; then ng build -prod -e prod; fi
 after_success:
-  - git config --global user.email "builds@travis-ci.com"
-  - git config --global user.name "Travis CI"
-  #- export GIT_TAG=build-$TRAVIS_BRANCH-$(date -u "+%Y-%m-%d-%H-%M-%S")-$TRAVIS_BUILD_NUMBER
+    #- export GIT_TAG=build-$TRAVIS_BRANCH-$(date -u "+%Y-%m-%d-%H-%M-%S")-$TRAVIS_BUILD_NUMBER
   #- git tag $GIT_TAG -a -m "Generated tag from TravisCI build $TRAVIS_BUILD_NUMBER"
   #- git push origin $GIT_TAG
-  - if [ $PROD ]; then git push https://prod:${PROD_PWD}@ladders.lrem.net/git; fi
+  - if [ $PROD ]; then 
+    git config --global user.email "builds@travis-ci.com"
+    git config --global user.name "Travis CI"
+    git add -f dist/
+    git commit -m "Artifacts from Travis build ${TRAVIS_BUILD_NUMBER}."
+    git push https://prod:${PROD_PWD}@ladders.lrem.net/git/ladders
+    fi
