--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_install:
   - if [[ $TRAVIS_BRANCH = "master" ]] &&
        [[ $TRAVIS_PULL_REQUEST = "false" ]] &&
        [[ $TRAVIS_REPO_SLUG = "lrem/ladders" ]]; then
-      export PROD=1
-      git branch "build-${TRAVIS_BUILD_NUMBER}"
+      export PROD=1;
+      git branch "build-${TRAVIS_BUILD_NUMBER}";
     fi
   - nvm install node
 install:
@@ -41,9 +41,9 @@ after_success:
   #- git tag $GIT_TAG -a -m "Generated tag from TravisCI build $TRAVIS_BUILD_NUMBER"
   #- git push origin $GIT_TAG
   - if [ $PROD ]; then 
-    git config --global user.email "builds@travis-ci.com"
-    git config --global user.name "Travis CI"
-    git add -f dist/
-    git commit -m "Artifacts from Travis build ${TRAVIS_BUILD_NUMBER}."
-    git push https://prod:${PROD_PWD}@ladders.lrem.net/git/ladders
+    git config --global user.email "builds@travis-ci.com";
+    git config --global user.name "Travis CI";
+    git add -f dist/;
+    git commit -m "Artifacts from Travis build ${TRAVIS_BUILD_NUMBER}.";
+    git push https://prod:${PROD_PWD}@ladders.lrem.net/git/ladders;
     fi
