--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -51,7 +51,7 @@ server {
 		fastcgi_param GIT_PROJECT_ROOT /home/ladders/git;
 		fastcgi_param PATH_INFO $1;
 		fastcgi_param REMOTE_USER $remote_user;
-		fastcgi_pass unix:/var/run/fcgiwrap.socket;
+		fastcgi_pass unix:/var/run/fcgiwrap-ladders.socket;
 		access_log /var/log/nginx/ladders.git.access.log;
 		error_log /var/log/nginx/ladders.git.error.log;
 	}
