--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -39,6 +39,8 @@ server {
 	location /api {
 		include uwsgi_params;
 		uwsgi_pass unix:/tmp/ladders.sock;
+		access_log /var/log/nginx/ladders.api.access.log;
+		error_log /var/log/nginx/ladders.api.error.log;
 	}
 
 	location ~ /git(/.*) {
