--- a/web/package.json
+++ b/web/package.json
@@ -12,20 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.2",
+    "@angular/animations": "^4.3.6",
     "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.1.2",
-    "@angular/compiler": "^4.1.2",
-    "@angular/core": "^4.1.2",
-    "@angular/forms": "^4.1.2",
-    "@angular/http": "^4.1.2",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
     "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.1.2",
-    "@angular/platform-browser-dynamic": "^4.1.2",
-    "@angular/router": "^4.1.2",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.10"
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "core-js": "^2.5.0",
+    "ng2-google-charts": "^3.0.1",
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.3",
