Don't use production settings for e2e.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,14 +32,11 @@ script:
   - cd web
   - ng build
   - ng lint
-  - ng serve -prod &
-  - sleep 5 # In the odd case starting server takes longer than Chrome.
+  - ng serve &
+  - sleep 5 # In the odd case starting the server takes longer than Chrome.
   - ng e2e
   - if [ $PROD ]; then ng build -prod -e prod; fi
 after_success:
-    #- export GIT_TAG=build-$TRAVIS_BRANCH-$(date -u "+%Y-%m-%d-%H-%M-%S")-$TRAVIS_BUILD_NUMBER
-  #- git tag $GIT_TAG -a -m "Generated tag from TravisCI build $TRAVIS_BUILD_NUMBER"
-  #- git push origin $GIT_TAG
   - if [ $PROD ]; then 
     git config --global user.email "builds@travis-ci.com";
     git config --global user.name "Travis CI";
