--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -43,6 +43,12 @@ server {
 		error_log /var/log/nginx/ladders.api.error.log;
 	}
 
+	location /dev {
+		upload_store /home/ladders/dev;
+		auth_basic "Git";
+		auth_basic_user_file /etc/nginx/auth/git;
+	}
+
 	location ~ /git(/.*) {
 		auth_basic "Git";
 		auth_basic_user_file /etc/nginx/auth/git;
