--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
   ssh_known_hosts: ladders.lrem.net
 before_install:
   - "export DISPLAY=:99.0"
+  - - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/xvfb_99.pid \
+      --make-pidfile --background --exec /usr/bin/Xvfb -- \
+      :99 -ac -screen 0 3840x2160x24"
   - "sh -e /etc/init.d/xvfb start"
   - if [[ $TRAVIS_BRANCH = "master" ]] &&
        [[ $TRAVIS_PULL_REQUEST = "false" ]] &&
