--- a/web/package.json
+++ b/web/package.json
@@ -12,40 +12,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/cdk": "^2.0.0-beta.10",
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/material": "^2.0.0-beta.10",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/router": "^4.3.6",
-    "core-js": "^2.5.1",
-    "ng2-google-charts": "^3.1.0",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.17"
+    "@angular/animations": "4.3.6",
+    "@angular/cdk": "2.0.0-beta.10",
+    "@angular/common": "4.3.6",
+    "@angular/compiler": "4.3.6",
+    "@angular/core": "4.3.6",
+    "@angular/forms": "4.3.6",
+    "@angular/http": "4.3.6",
+    "@angular/material": "2.0.0-beta.10",
+    "@angular/platform-browser": "4.3.6",
+    "@angular/platform-browser-dynamic": "4.3.6",
+    "@angular/router": "4.3.6",
+    "core-js": "2.5.1",
+    "ng2-google-charts": "3.1.0",
+    "rxjs": "5.4.3",
+    "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.3",
-    "@angular/compiler-cli": "^4.1.2",
+    "@angular/cli": "1.0.3",
+    "@angular/compiler-cli": "4.3.6",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~7.0.18",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.1",
-    "jasmine-spec-reporter": "~4.1.0",
-    "jasmine2-protractor-utils": "^1.3.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.2.0",
-    "typescript": "~2.3.2"
+    "@types/node": "7.0.18",
+    "codelyzer": "3.0.1",
+    "jasmine-core": "2.6.1",
+    "jasmine-spec-reporter": "4.1.0",
+    "jasmine2-protractor-utils": "1.3.0",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "protractor": "5.1.0",
+    "ts-node": "3.0.4",
+    "tslint": "5.2.0",
+    "typescript": "2.3.2"
   }
 }
