--- a/web/package.json
+++ b/web/package.json
@@ -12,40 +12,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.3.6",
-    "@angular/cdk": "2.0.0-beta.10",
-    "@angular/common": "4.3.6",
-    "@angular/compiler": "4.3.6",
-    "@angular/core": "4.3.6",
-    "@angular/forms": "4.3.6",
-    "@angular/http": "4.3.6",
-    "@angular/material": "2.0.0-beta.10",
-    "@angular/platform-browser": "4.3.6",
-    "@angular/platform-browser-dynamic": "4.3.6",
-    "@angular/router": "4.3.6",
-    "core-js": "2.5.1",
-    "ng2-google-charts": "3.1.0",
-    "rxjs": "5.4.3",
-    "zone.js": "0.8.17"
+    "@angular/animations": "5.1.2",
+    "@angular/cdk": "5.0.2",
+    "@angular/common": "5.1.2",
+    "@angular/compiler": "5.1.2",
+    "@angular/core": "5.1.2",
+    "@angular/forms": "5.1.2",
+    "@angular/http": "5.1.2",
+    "@angular/material": "5.0.2",
+    "@angular/platform-browser": "5.1.2",
+    "@angular/platform-browser-dynamic": "5.1.2",
+    "@angular/router": "5.1.2",
+    "core-js": "2.5.3",
+    "ng2-google-charts": "3.3.0",
+    "rxjs": "5.5.6",
+    "zone.js": "0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.3",
-    "@angular/compiler-cli": "4.3.6",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "7.0.18",
-    "codelyzer": "3.0.1",
-    "jasmine-core": "2.6.1",
-    "jasmine-spec-reporter": "4.1.0",
+    "@angular/cli": "1.6.3",
+    "@angular/compiler-cli": "5.1.2",
+    "@types/jasmine": "2.8.3",
+    "@types/node": "8.5.2",
+    "codelyzer": "4.0.2",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
     "jasmine2-protractor-utils": "1.3.0",
-    "karma": "1.7.0",
-    "karma-chrome-launcher": "2.1.1",
+    "karma": "2.0.0",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.2.1",
-    "karma-jasmine": "1.1.0",
+    "karma-coverage-istanbul-reporter": "1.3.3",
+    "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.1.0",
-    "ts-node": "3.0.4",
-    "tslint": "5.2.0",
-    "typescript": "2.3.2"
+    "protractor": "5.2.2",
+    "ts-node": "4.1.0",
+    "tslint": "5.8.0",
+    "typescript": "~2.6.2"
   }
 }
